--- a/styles.css
+++ b/styles.css
@@ -45,13 +45,18 @@ img {
 	--secondary-font: 'Open Sans', sans-serif;
 	--shadow: rgba(0, 0, 0, 0.75);
 	--verde: #7ac943;
+
+	scroll-behavior: smooth;
 }
 
-body {
-	align-items: center;
-	background-color: var(--gris-medio);
+body,
+header,
+section {
 	display: flex;
 	flex-direction: column;
+	align-items: center;
+	background-color: var(--gris-medio);
+	width: 100%;
 }
 
 .header {
@@ -68,7 +73,6 @@ body {
 }
 
 .header-img {
-	background: center / contain no-repeat url(./images/juliana.jpg);
 	border-radius: 50%;
 	border: 1px solid var(--gris-oscuro);
 	box-shadow: 8px 16px 32px 0px var(--shadow);
@@ -77,13 +81,22 @@ body {
 	width: 300px;
 }
 
+nav {
+	width: 100%;
+}
+
 .navigation {
 	color: var(--blanco);
 	cursor: pointer;
 	display: flex;
 	justify-content: space-around;
-	margin: 24px 0;
+	margin: 24px auto;
 	width: 50%;
+}
+
+.nav-item a {
+	text-decoration: none;
+	color: var(--blanco);
 }
 
 .nav-item {
@@ -101,7 +114,7 @@ body {
 }
 
 .intro {
-	margin: 0 196px;
+	margin: 24px 196px 0;
 	font-family: var(--secondary-font);
 }
 
@@ -130,6 +143,15 @@ body {
 	width: 1500px;
 }
 
+.project-container li {
+	display: inline-block;
+}
+
+.project-container button {
+	background-color: transparent;
+	border: none;
+}
+
 .project {
 	border-radius: 5px;
 	border: 2px solid #000;
@@ -138,31 +160,12 @@ body {
 	margin: 0 8px;
 	transition: all 0.2s ease-in-out;
 	width: 250px;
+	object-fit: cover;
 }
 
 .project:hover {
 	cursor: pointer;
 	transform: scale(1.1);
-}
-
-.project1 {
-	background: center / cover no-repeat url(./images/project1.png);
-}
-
-.project2 {
-	background: center / cover no-repeat url(./images/project2.png);
-}
-
-.project3 {
-	background: center / cover no-repeat url(./images/project3.png);
-}
-
-.project4 {
-	background: center / cover no-repeat url(./images/project4.png);
-}
-
-.project5 {
-	background: center / cover no-repeat url(./images/project5.png);
 }
 
 .arrow {
@@ -215,6 +218,7 @@ input {
 	align-items: center;
 	background-color: var(--verde);
 	border-radius: 5px;
+	border: none;
 	color: white;
 	font-family: var(--secondary-font);
 	display: flex;
@@ -223,6 +227,11 @@ input {
 	margin-bottom: 48px;
 	width: 150px;
 	margin-left: auto;
+	font-size: 16px;
+}
+
+.send-button:hover {
+	cursor: pointer;
 }
 
 .notification {
